--- a/UITableView-CompressableHeadersEffect/UITableView-CompressableHeadersEffect/Base.lproj/Main.storyboard
+++ b/UITableView-CompressableHeadersEffect/UITableView-CompressableHeadersEffect/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ki6-mD-KJJ">
                                 <rect key="frame" x="0.0" y="20" width="600" height="300"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lake.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="kOX-Eb-j1F">
+                                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lake.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="kOX-Eb-j1F">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Compressable Header" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pJ0-it-Zhw">
@@ -54,8 +54,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="P4i-4n-E3k" firstAttribute="top" secondItem="ki6-mD-KJJ" secondAttribute="bottom" id="HQ5-SQ-0vA"/>
-                            <constraint firstItem="ki6-mD-KJJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Kh8-xX-T4c"/>
                             <constraint firstItem="ki6-mD-KJJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QP6-47-98G"/>
+                            <constraint firstItem="ki6-mD-KJJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Rzw-zc-rKo"/>
                             <constraint firstItem="P4i-4n-E3k" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="SHF-NY-tLW"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="P4i-4n-E3k" secondAttribute="bottom" id="aqR-yN-NrP"/>
                             <constraint firstAttribute="trailing" secondItem="P4i-4n-E3k" secondAttribute="trailing" id="p0t-Sb-Ypl"/>
@@ -63,6 +63,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="headerHeight" destination="DOm-7f-jjE" id="h85-KH-tbB"/>
                         <outlet property="tableView" destination="P4i-4n-E3k" id="1QC-e3-pcn"/>
                     </connections>
                 </viewController>
@@ -72,6 +73,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="lake.JPG" width="1920" height="1080"/>
+        <image name="lake.JPG" width="750" height="422"/>
     </resources>
 </document>
