--- a/UITableView-CompressableHeadersEffect/UITableView-CompressableHeadersEffect/Base.lproj/Main.storyboard
+++ b/UITableView-CompressableHeadersEffect/UITableView-CompressableHeadersEffect/Base.lproj/Main.storyboard
@@ -17,34 +17,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ki6-mD-KJJ">
-                                <rect key="frame" x="0.0" y="20" width="600" height="300"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lake.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="kOX-Eb-j1F">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Compressable Header" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pJ0-it-Zhw">
-                                        <rect key="frame" x="0.0" y="131" width="600" height="38"/>
-                                        <fontDescription key="fontDescription" name="MalayalamSangamMN-Bold" family="Malayalam Sangam MN" pointSize="32"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="DOm-7f-jjE"/>
-                                    <constraint firstItem="kOX-Eb-j1F" firstAttribute="top" secondItem="ki6-mD-KJJ" secondAttribute="top" id="DPC-Kc-MHA"/>
-                                    <constraint firstItem="pJ0-it-Zhw" firstAttribute="leading" secondItem="ki6-mD-KJJ" secondAttribute="leading" id="OeY-XT-eGA"/>
-                                    <constraint firstAttribute="trailing" secondItem="pJ0-it-Zhw" secondAttribute="trailing" id="Qqk-P8-Hei"/>
-                                    <constraint firstAttribute="bottom" secondItem="kOX-Eb-j1F" secondAttribute="bottom" id="a1B-NW-6Aj"/>
-                                    <constraint firstItem="pJ0-it-Zhw" firstAttribute="centerY" secondItem="ki6-mD-KJJ" secondAttribute="centerY" id="bGr-JM-f5m"/>
-                                    <constraint firstAttribute="trailing" secondItem="kOX-Eb-j1F" secondAttribute="trailing" id="eG4-04-JKr"/>
-                                    <constraint firstItem="kOX-Eb-j1F" firstAttribute="leading" secondItem="ki6-mD-KJJ" secondAttribute="leading" id="o2C-r9-eur"/>
-                                </constraints>
-                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="P4i-4n-E3k">
-                                <rect key="frame" x="0.0" y="320" width="600" height="280"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="ki6-mD-KJJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="330"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lakecrop.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="kOX-Eb-j1F">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="330"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Compressible Header" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pJ0-it-Zhw">
+                                            <rect key="frame" x="0.0" y="129.5" width="600" height="72"/>
+                                            <fontDescription key="fontDescription" name="KhmerSangamMN" family="Khmer Sangam MN" pointSize="36"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="300" id="DOm-7f-jjE"/>
+                                        <constraint firstItem="kOX-Eb-j1F" firstAttribute="top" secondItem="ki6-mD-KJJ" secondAttribute="top" id="DPC-Kc-MHA"/>
+                                        <constraint firstItem="pJ0-it-Zhw" firstAttribute="leading" secondItem="ki6-mD-KJJ" secondAttribute="leading" id="OeY-XT-eGA"/>
+                                        <constraint firstAttribute="trailing" secondItem="pJ0-it-Zhw" secondAttribute="trailing" id="Qqk-P8-Hei"/>
+                                        <constraint firstAttribute="bottom" secondItem="kOX-Eb-j1F" secondAttribute="bottom" id="a1B-NW-6Aj"/>
+                                        <constraint firstItem="pJ0-it-Zhw" firstAttribute="centerY" secondItem="ki6-mD-KJJ" secondAttribute="centerY" id="bGr-JM-f5m"/>
+                                        <constraint firstAttribute="trailing" secondItem="kOX-Eb-j1F" secondAttribute="trailing" id="eG4-04-JKr"/>
+                                        <constraint firstItem="kOX-Eb-j1F" firstAttribute="leading" secondItem="ki6-mD-KJJ" secondAttribute="leading" id="o2C-r9-eur"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="DOm-7f-jjE"/>
+                                        </mask>
+                                    </variation>
+                                </view>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="IVe-Qu-VK6"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="VWH-uK-b0l"/>
@@ -53,17 +59,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="P4i-4n-E3k" firstAttribute="top" secondItem="ki6-mD-KJJ" secondAttribute="bottom" id="HQ5-SQ-0vA"/>
-                            <constraint firstItem="ki6-mD-KJJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QP6-47-98G"/>
-                            <constraint firstItem="ki6-mD-KJJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Rzw-zc-rKo"/>
+                            <constraint firstItem="P4i-4n-E3k" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Plh-fI-eXB"/>
                             <constraint firstItem="P4i-4n-E3k" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="SHF-NY-tLW"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="P4i-4n-E3k" secondAttribute="bottom" id="aqR-yN-NrP"/>
                             <constraint firstAttribute="trailing" secondItem="P4i-4n-E3k" secondAttribute="trailing" id="p0t-Sb-Ypl"/>
-                            <constraint firstAttribute="trailing" secondItem="ki6-mD-KJJ" secondAttribute="trailing" id="wcd-4H-Mew"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="headerHeight" destination="DOm-7f-jjE" id="h85-KH-tbB"/>
                         <outlet property="tableView" destination="P4i-4n-E3k" id="1QC-e3-pcn"/>
                     </connections>
                 </viewController>
@@ -73,6 +75,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="lake.JPG" width="750" height="422"/>
+        <image name="lakecrop.JPG" width="554" height="831"/>
     </resources>
 </document>
